# mission-pack-nodered-bundle

./: README.md  main.py  pyproject.toml
scripts/: hot-fix-docker.sh  install_docker.sh  install_sensecraft.sh  setup-r1000.sh
tools/: install_docker.py
tools/config/: mirrors.yaml
tools/network_region/: __init__.py  cli.py  config_loader.py  mirror_manager.py  network.py
